--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 
   <footer>
-    Built by <a href="#">Codiify</a>
+    Built by <a href="https://abdullahcoded.blogspot.com/">ᗩᗷᗪᑌᒪᒪᗩᕼ ᑕᗝᗪᗴᗪ</a>
   </footer>
 
   <script src="script.js"></script>
